@@ -2,7 +2,6 @@ package ru.privetdruk.restorder.handler.client;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
@@ -14,6 +13,7 @@ import reactor.core.scheduler.Schedulers;
 import ru.privetdruk.restorder.handler.MessageHandler;
 import ru.privetdruk.restorder.model.consts.Constant;
 import ru.privetdruk.restorder.model.consts.MessageText;
+import ru.privetdruk.restorder.model.dto.ReserveDto;
 import ru.privetdruk.restorder.model.dto.ValidateTavernResult;
 import ru.privetdruk.restorder.model.entity.*;
 import ru.privetdruk.restorder.model.enums.*;
@@ -22,17 +22,27 @@ import ru.privetdruk.restorder.service.util.StringService;
 import ru.privetdruk.restorder.service.util.ValidationService;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.format.DateTimeParseException;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static org.springframework.util.CollectionUtils.isEmpty;
+import static ru.privetdruk.restorder.model.consts.Constant.DD_MM_YYYY_FORMATTER;
+import static ru.privetdruk.restorder.model.consts.Constant.HH_MM_FORMATTER;
+import static ru.privetdruk.restorder.model.consts.MessageText.NOTIFY_USER_BLOCK;
 import static ru.privetdruk.restorder.model.consts.MessageText.NOTIFY_USER_RESERVE_CANCELLED;
+import static ru.privetdruk.restorder.service.KeyboardService.RESERVE_LIST_KEYBOARD;
+import static ru.privetdruk.restorder.service.KeyboardService.YES_NO_KEYBOARD;
 import static ru.privetdruk.restorder.service.MessageService.configureMessage;
 
 @Component
 @RequiredArgsConstructor
 public class ReserveHandler implements MessageHandler {
+    private final BlacklistService blacklistService;
+    private final BlacklistSettingService blacklistSettingService;
+    private final ContactService contactService;
     private final MessageService messageService;
     private final MainMenuHandler mainMenuHandler;
     private final ReserveService reserveService;
@@ -41,9 +51,10 @@ public class ReserveHandler implements MessageHandler {
     private final TelegramApiService telegramApiService;
     private final UserService userService;
     private final ValidationService validationService;
+    private final VisitingService visitingService;
 
-    private final Map<UserEntity, LocalDate> deleteReservesTemporary = new HashMap<>();
-    private final Map<UserEntity, ReserveEntity> addReservesTemporary = new HashMap<>();
+    private final Map<UserEntity, ReserveDto> completionReservesCache = new HashMap<>();
+    private final Map<UserEntity, ReserveEntity> addReservesCache = new HashMap<>();
 
     @Override
     public SendMessage handle(UserEntity user, Message message, CallbackQuery callback) {
@@ -52,9 +63,10 @@ public class ReserveHandler implements MessageHandler {
         Button button = Button.fromText(messageText)
                 .orElse(Button.NOTHING);
         Long chatId = message.getChatId();
-        TavernEntity tavern = user.getTavern();
 
-        if (!tavern.isValid()) {
+        if (!user.getTavern().isValid()) {
+            TavernEntity tavern = tavernService.findWithDataWithoutEmployees(user.getTavern());
+
             ValidateTavernResult validate = validationService.validate(tavern);
 
             tavern.setValid(validate.isValid());
@@ -80,7 +92,9 @@ public class ReserveHandler implements MessageHandler {
                     }
                 }
 
-                user.setSubState(subState.getParentSubState());
+                if (subState != SubState.BLOCK_CLIENT_RESERVE && subState != SubState.CONFIRM_CLIENT_RESERVE) {
+                    userService.updateSubState(user, subState.getParentSubState());
+                }
             }
             case RETURN_MAIN_MENU -> {
                 return returnToMainMenu(user, message, callback);
@@ -97,9 +111,12 @@ public class ReserveHandler implements MessageHandler {
             }
         }
 
+        subState = user.getSubState();
+
         // обновление состояния
-        if (button != Button.CANCEL && button != Button.NO) {
-            switch (user.getSubState()) {
+        if (button != Button.CANCEL && (button != Button.NO
+                || (subState == SubState.CONFIRM_CLIENT_RESERVE || subState == SubState.BLOCK_CLIENT_RESERVE))) {
+            switch (subState) {
                 case VIEW_MAIN_MENU -> {
                     if (button == Button.RESERVE_LIST) {
                         user.setState(State.RESERVE);
@@ -111,32 +128,31 @@ public class ReserveHandler implements MessageHandler {
                 case DELETE_RESERVE_CHOICE_DATE -> {
                     LocalDate date;
                     try {
-                        date = LocalDate.parse(messageText, Constant.DD_MM_YYYY_FORMATTER);
+                        date = LocalDate.parse(messageText, DD_MM_YYYY_FORMATTER);
                     } catch (DateTimeParseException e) {
                         userService.updateSubState(user, user.getSubState().getParentSubState());
                         return configureMessage(
                                 chatId,
                                 "Вы ввели некорректное значение. Операция отменяется.",
-                                KeyboardService.RESERVE_LIST_KEYBOARD
+                                RESERVE_LIST_KEYBOARD
                         );
                     }
 
-                    List<ReserveEntity> reserves = user.getTavern().getTables().stream()
-                            .map(TableEntity::getReserves)
-                            .flatMap(Collection::stream)
-                            .filter(reserve -> reserve.getStatus() == ReserveStatus.ACTIVE)
-                            .filter(reserve -> reserve.getDate().equals(date))
+                    List<ReserveEntity> reserves = reserveService.findActiveByTavernWithTableUser(user.getTavern(), date).stream()
                             .sorted(Comparator.comparing(ReserveEntity::getTime))
-                            .collect(Collectors.toList());
+                            .toList();
 
-                    if (CollectionUtils.isEmpty(reserves)) {
+                    if (isEmpty(reserves)) {
                         userService.updateSubState(user, user.getSubState().getParentSubState());
-                        return configureMessage(chatId, "Нет резервов за выбранную дату.", KeyboardService.RESERVE_LIST_KEYBOARD);
+                        return configureMessage(chatId, "У Вас нет бронирований за выбранную дату.", RESERVE_LIST_KEYBOARD);
                     }
 
                     userService.updateSubState(user, SubState.DELETE_RESERVE_CHOICE_TABLE);
 
-                    deleteReservesTemporary.put(user, date);
+                    ReserveDto reserveDto = ReserveDto.builder()
+                            .date(date)
+                            .build();
+                    completionReservesCache.put(user, reserveDto);
 
                     ReplyKeyboardMarkup reservesDatesKeyboard = new ReplyKeyboardMarkup();
                     List<KeyboardRow> rows = new ArrayList<>();
@@ -148,7 +164,7 @@ public class ReserveHandler implements MessageHandler {
                                     "%s %s %s [%s]",
                                     reserve.getTime(),
                                     reserve.getTable().getLabel(),
-                                    reserve.getManualMode() ? reserve.getName() : reserve.getUser().getName(),
+                                    reserve.getUser() == null ? reserve.getName() : reserve.getUser().getName(),
                                     reserve.getId()
                             )))))
                     );
@@ -158,73 +174,154 @@ public class ReserveHandler implements MessageHandler {
                     reservesDatesKeyboard.setKeyboard(rows);
                     reservesDatesKeyboard.setResizeKeyboard(true);
 
-                    return configureMessage(chatId, "Выберите резерв для удаления.", reservesDatesKeyboard);
+                    return configureMessage(chatId, "Выберите бронирование для завершения.", reservesDatesKeyboard);
                 }
                 case DELETE_RESERVE_CHOICE_TABLE -> {
-                    userService.updateSubState(user, user.getSubState().getParentSubState());
+                    ReserveDto reserve = completionReservesCache.get(user);
 
                     if (button == Button.PICK_ALL) {
-                        LocalDate date = deleteReservesTemporary.get(user);
-                        if (date != null) {
-                            Set<ReserveEntity> reserves = user.getTavern().getTables().stream()
-                                    .map(TableEntity::getReserves)
-                                    .flatMap(Collection::stream)
-                                    .filter(reserve -> reserve.getStatus() == ReserveStatus.ACTIVE)
-                                    .filter(reserve -> reserve.getDate().equals(date))
-                                    .collect(Collectors.toSet());
+                        userService.updateSubState(user, user.getSubState().getParentSubState());
+
+                        if (reserve.getDate() != null) {
+                            List<ReserveEntity> reserves = reserveService.findActiveByTavern(user.getTavern(), reserve.getDate());
 
                             reserveService.updateStatus(reserves, ReserveStatus.COMPLETED);
 
-                            return configureMessage(chatId, "Все резервы были завершены.", KeyboardService.RESERVE_LIST_KEYBOARD);
-                        }
-                    } else {
-                        Long id = messageService.parseId(messageText);
-                        if (id != null) {
-                            user.getTavern().getTables().stream()
-                                    .map(TableEntity::getReserves)
-                                    .flatMap(Collection::stream)
-                                    .filter(reserve -> reserve.getStatus() == ReserveStatus.ACTIVE)
-                                    .filter(reserve -> reserve.getId().equals(id))
-                                    .findFirst()
-                                    .ifPresent(foundReserve -> {
-                                        reserveService.updateStatus(foundReserve, ReserveStatus.COMPLETED);
+                            completionReservesCache.remove(user);
 
-                                        UserEntity reserveUser = foundReserve.getUser();
-                                        if (reserveUser != null && !reserveUser.equals(user)) {
-                                            telegramApiService.sendMessage(
-                                                            reserveUser.getTelegramId(),
-                                                            String.format(
-                                                                    NOTIFY_USER_RESERVE_CANCELLED,
-                                                                    foundReserve.getDate().format(Constant.DD_MM_YYYY_FORMATTER),
-                                                                    foundReserve.getTime().format(Constant.HH_MM_FORMATTER),
-                                                                    foundReserve.getTable().getTavern().getName()
-                                                            ),
-                                                            false
-                                                    )
-                                                    .subscribeOn(Schedulers.boundedElastic())
-                                                    .subscribe();
-                                        }
-                                    });
+                            String textMessage = "Все бронирования были завершены."
+                                    + System.lineSeparator()
+                                    + System.lineSeparator()
+                                    + fillReservesList(user.getTavern());
 
-                            return configureMessage(chatId, "Выбранный резерв завершен.", KeyboardService.RESERVE_LIST_KEYBOARD);
+                            return configureMessage(chatId, textMessage, RESERVE_LIST_KEYBOARD);
                         }
                     }
+
+                    Long reserveId = messageService.parseId(messageText);
+                    if (reserveId == null) {
+                        userService.updateSubState(user, user.getSubState().getParentSubState());
+                    } else {
+                        reserve.setId(reserveId);
+
+                        userService.updateSubState(user, SubState.CONFIRM_CLIENT_RESERVE);
+
+                        return configureMessage(chatId, "Клиент пришёл?", YES_NO_KEYBOARD);
+                    }
+                }
+                case CONFIRM_CLIENT_RESERVE -> {
+                    ReserveDto reserveCache = completionReservesCache.get(user);
+
+                    if (reserveCache.getId() == null) {
+                        userService.updateSubState(user, user.getSubState().getParentSubState());
+                        break;
+                    }
+
+                    ReserveEntity reserve = reserveService.findActiveByIdWithTableUserTavern(reserveCache.getId(), user.getTavern());
+                    UserEntity reserveUser = reserve.getUser();
+
+                    if (button == Button.NO) {
+                        BlacklistSettingEntity blacklistSetting = blacklistSettingService.findByTavern(user.getTavern())
+                                .orElse(null);
+
+                        if (blacklistSetting != null && blacklistSetting.enabled()) {
+                            VisitingEntity visiting = visitingService.findByPhoneNumberAndTavern(reserve.getPhoneNumber(), user.getTavern())
+                                    .orElse(null);
+
+                            if (visiting == null && reserveUser == null) {
+                                visiting = VisitingEntity.builder()
+                                        .phoneNumber(reserve.getPhoneNumber())
+                                        .tavern(user.getTavern())
+                                        .times(1)
+                                        .build();
+                            } else if (visiting == null) {
+                                visiting = VisitingEntity.builder()
+                                        .phoneNumber(reserve.getPhoneNumber())
+                                        .user(reserveUser)
+                                        .tavern(user.getTavern())
+                                        .times(1)
+                                        .build();
+                            } else {
+                                if (reserveUser != null && visiting.getUser() == null) {
+                                    visiting.setUser(reserveUser);
+                                }
+
+                                visiting.setTimes(visiting.getTimes() + 1);
+                            }
+
+                            visitingService.save(visiting);
+
+                            BlacklistEntity blacklist = blacklistService.findActiveByPhoneNumber(user.getTavern(), visiting.getPhoneNumber());
+
+                            if (blacklist == null && visiting.getTimes() >= blacklistSetting.getTimes()) {
+                                if (visiting.getUser() != null) {
+                                    reserveCache.setUser(reserveUser);
+                                    reserveCache.setReserve(reserve);
+                                    reserveCache.setBlockDays(blacklistSetting.getDays());
+                                    reserveCache.setPhoneNumber(visiting.getPhoneNumber());
+                                }
+
+                                userService.updateSubState(user, SubState.BLOCK_CLIENT_RESERVE);
+
+                                String text = "Клиент не пришел по бронированию уже "
+                                        + visiting.getTimes() + " " + stringService.declensionTimes(visiting.getTimes())
+                                        + ". Заблокировать его?";
+                                return configureMessage(chatId, text, YES_NO_KEYBOARD);
+                            }
+                        }
+                    }
+
+                    return completionReserve(user, chatId, reserve);
+                }
+                case BLOCK_CLIENT_RESERVE -> {
+                    ReserveDto reserveCache = completionReservesCache.get(user);
+
+                    if (button == Button.NOTHING) {
+                        break;
+                    }
+
+                    if (button == Button.YES) {
+                        UserEntity reserveUser = reserveCache.getUser();
+                        LocalDateTime unlockDate = reserveCache.getBlockDays() > 0 ? LocalDateTime.now().plusDays(reserveCache.getBlockDays()) : LocalDateTime.of(9999, 12, 12, 0, 0, 0, 0);
+
+                        BlacklistEntity blacklist = BlacklistEntity.builder()
+                                .tavern(user.getTavern())
+                                .user(reserveUser)
+                                .phoneNumber(reserveCache.getPhoneNumber())
+                                .unlockDate(unlockDate)
+                                .reason(Button.DOESNT_COME.getText())
+                                .build();
+
+                        if (reserveUser != null) {
+                            telegramApiService.sendMessage(
+                                            reserveUser.getTelegramId(),
+                                            NOTIFY_USER_BLOCK + user.getTavern().getName(),
+                                            false
+                                    )
+                                    .subscribeOn(Schedulers.boundedElastic())
+                                    .subscribe();
+                        }
+
+                        blacklistService.save(blacklist);
+                    }
+
+                    return completionReserve(user, chatId, reserveCache.getReserve());
                 }
                 case ADD_RESERVE_CHOICE_DATE -> {
                     LocalDate date;
-                    if (button == Button.TODAY) {
-                        date = LocalDate.now();
-                    } else if (button == Button.TOMORROW) {
-                        date = LocalDate.now().plusDays(1);
-                    } else {
-                        try {
-                            date = LocalDate.parse(messageText, Constant.DD_MM_YYYY_WITHOUT_DOT_FORMATTER);
-                        } catch (DateTimeParseException e) {
-                            return configureMessage(
-                                    chatId,
-                                    "Дата не соответствует формату. Повторите попытку:",
-                                    KeyboardService.TODAY_TOMORROW_CANCEL_KEYBOARD
-                            );
+                    switch (button) {
+                        case TODAY -> date = LocalDate.now();
+                        case TOMORROW -> date = LocalDate.now().plusDays(1);
+                        default -> {
+                            try {
+                                date = LocalDate.parse(messageText, Constant.DD_MM_YYYY_WITHOUT_DOT_FORMATTER);
+                            } catch (DateTimeParseException exception) {
+                                return configureMessage(
+                                        chatId,
+                                        "Дата не соответствует формату. Повторите попытку:",
+                                        KeyboardService.TODAY_TOMORROW_CANCEL_KEYBOARD
+                                );
+                            }
                         }
                     }
 
@@ -238,16 +335,16 @@ public class ReserveHandler implements MessageHandler {
 
                     ReserveEntity newReserve = new ReserveEntity();
                     newReserve.setDate(date);
-                    newReserve.setManualMode(true);
-                    newReserve.setUser(user);
 
-                    addReservesTemporary.put(user, newReserve);
+                    addReservesCache.put(user, newReserve);
 
                     userService.updateSubState(user, SubState.ADD_RESERVE_CHOICE_TABLE);
 
                     return configureChoiceTable(user, chatId);
                 }
                 case ADD_RESERVE_CHOICE_TABLE -> {
+                    TavernEntity tavern = tavernService.findWithTables(user.getTavern());
+
                     String label = messageText.split(" ")[0];
                     TableEntity reserveTable = tavern.getTables().stream()
                             .filter(table -> table.getLabel().equals(label))
@@ -258,7 +355,7 @@ public class ReserveHandler implements MessageHandler {
                         return configureChoiceTable(user, chatId);
                     }
 
-                    addReservesTemporary.get(user)
+                    addReservesCache.get(user)
                             .setTable(reserveTable);
 
                     userService.updateSubState(user, SubState.ADD_RESERVE_CHOICE_TIME);
@@ -276,7 +373,7 @@ public class ReserveHandler implements MessageHandler {
 
                         LocalTime time = button == Button.NOW ? now : LocalTime.parse(messageText, Constant.HH_MM_WITHOUT_DOT_FORMATTER);
 
-                        ReserveEntity reserve = addReservesTemporary.get(user);
+                        ReserveEntity reserve = addReservesCache.get(user);
 
                         if (reserve.getDate().isEqual(LocalDate.now()) && time.isBefore(now)) {
                             return configureMessage(
@@ -308,7 +405,7 @@ public class ReserveHandler implements MessageHandler {
                         }
                     }
 
-                    addReservesTemporary.get(user)
+                    addReservesCache.get(user)
                             .setNumberPeople(numberPeople);
 
                     userService.updateSubState(user, SubState.ADD_RESERVE_CHOICE_NAME);
@@ -316,7 +413,7 @@ public class ReserveHandler implements MessageHandler {
                     return configureMessage(chatId, "Введите имя:", KeyboardService.CANCEL_KEYBOARD);
                 }
                 case ADD_RESERVE_CHOICE_NAME -> {
-                    addReservesTemporary.get(user)
+                    addReservesCache.get(user)
                             .setName(messageText);
 
                     userService.updateSubState(user, SubState.ADD_RESERVE_CHOICE_PHONE);
@@ -325,22 +422,33 @@ public class ReserveHandler implements MessageHandler {
                 }
                 case ADD_RESERVE_CHOICE_PHONE -> {
                     if (button != Button.WITHOUT_PHONE) {
-                        addReservesTemporary.get(user)
-                                .setPhoneNumber(messageText);
+                        String phoneNumber = contactService.preparePhoneNumber(messageText);
+
+                        if (validationService.isNotValidPhone(phoneNumber)) {
+                            return configureMessage(
+                                    chatId,
+                                    MessageText.INCORRECT_PHONE_NUMBER,
+                                    KeyboardService.SHARE_PHONE_KEYBOARD
+                            );
+                        }
+
+                        ReserveEntity reserve = addReservesCache.get(user);
+                        reserve.setPhoneNumber(phoneNumber);
+                        reserve.setUser(userService.findByPhoneNumber(phoneNumber));
                     }
 
                     userService.updateSubState(user, SubState.ADD_RESERVE_INFO);
 
-                    return configureMessage(chatId, fillReserveInfo(addReservesTemporary.get(user)), KeyboardService.APPROVE_KEYBOARD);
+                    return configureMessage(chatId, fillReserveInfo(addReservesCache.get(user)), KeyboardService.APPROVE_KEYBOARD);
                 }
                 case ADD_RESERVE_INFO -> {
                     user.setState(State.MAIN_MENU);
                     userService.updateSubState(user, SubState.VIEW_MAIN_MENU);
 
                     if (button == Button.ACCEPT) {
-                        ReserveEntity reserve = addReservesTemporary.get(user);
+                        ReserveEntity reserve = addReservesCache.get(user);
                         reserveService.save(reserve);
-                        addReservesTemporary.remove(user);
+                        addReservesCache.remove(user);
 
                         return configureMessage(chatId, "Столик забронирован.", KeyboardService.CLIENT_MAIN_MENU);
                     }
@@ -352,11 +460,40 @@ public class ReserveHandler implements MessageHandler {
 
         // отрисовка меню
         return switch (user.getSubState()) {
-            case VIEW_RESERVE_LIST ->
-                    configureMessage(chatId, fillReservesList(tavern.getTables()), KeyboardService.RESERVE_LIST_KEYBOARD);
+            case VIEW_RESERVE_LIST -> configureMessage(chatId, fillReservesList(user.getTavern()), RESERVE_LIST_KEYBOARD);
 
             default -> new SendMessage();
-        };
+        }
+
+                ;
+    }
+
+    private SendMessage completionReserve(UserEntity user, Long chatId, ReserveEntity reserve) {
+        UserEntity reserveUser = reserve.getUser();
+
+        reserveService.updateStatus(reserve, ReserveStatus.COMPLETED);
+
+        if (reserveUser != null) {
+            telegramApiService.sendMessage(
+                            reserveUser.getTelegramId(),
+                            String.format(
+                                    NOTIFY_USER_RESERVE_CANCELLED,
+                                    reserve.getDate().format(DD_MM_YYYY_FORMATTER),
+                                    reserve.getTime().format(HH_MM_FORMATTER),
+                                    user.getTavern().getName()
+                            ),
+                            false
+                    )
+                    .subscribeOn(Schedulers.boundedElastic())
+                    .subscribe();
+        }
+
+        String textMessage = "Выбранное бронирование завершено."
+                + System.lineSeparator()
+                + System.lineSeparator()
+                + fillReservesList(user.getTavern());
+
+        return configureMessage(chatId, textMessage, RESERVE_LIST_KEYBOARD);
     }
 
     private SendMessage configureAddReserve(UserEntity user, Long chatId) {
@@ -364,7 +501,7 @@ public class ReserveHandler implements MessageHandler {
 
         return configureMessage(
                 chatId,
-                "Введите дату резерва в формате ДДММГГГГ <i>(пример: 24052022)</i>:",
+                "Введите дату бронирования в формате ДДММГГГГ <i>(пример: 24052022)</i>:",
                 KeyboardService.TODAY_TOMORROW_CANCEL_KEYBOARD
         );
     }
@@ -379,8 +516,8 @@ public class ReserveHandler implements MessageHandler {
                         Кол-во персон: <i>%s</i>
                         Имя: <i>%s</i>
                         Телефон: <i>%s</i>""",
-                reserve.getDate().format(Constant.DD_MM_YYYY_FORMATTER),
-                reserve.getTime().format(Constant.HH_MM_FORMATTER),
+                reserve.getDate().format(DD_MM_YYYY_FORMATTER),
+                reserve.getTime().format(HH_MM_FORMATTER),
                 reserve.getTable().getLabel(),
                 reserve.getNumberPeople(),
                 reserve.getName(),
@@ -392,30 +529,31 @@ public class ReserveHandler implements MessageHandler {
     private SendMessage configureChoiceTime(Long chatId) {
         return configureMessage(
                 chatId,
-                "Введите время резерва <i>(в формате ЧЧММ, пример: 1830 или 0215)</i>:",
+                "Введите время бронирования <i>(в формате ЧЧММ, пример: 1830 или 0215)</i>:",
                 KeyboardService.RESERVE_CHOICE_TIME_KEYBOARD
         );
     }
 
     private SendMessage configureChoicePersons(Long chatId) {
-        return configureMessage(chatId, "Введите или выберите кол-во персон:", KeyboardService.NUMBERS_KEYBOARD_WITH_CANCEL);
+        return configureMessage(chatId, "Введите или выберите кол-во персон:", KeyboardService.NUMBERS_CANCEL_KEYBOARD);
     }
 
     private SendMessage configureChoiceTable(UserEntity user, Long chatId) {
-        LocalDate date = addReservesTemporary.get(user)
+        LocalDate date = addReservesCache.get(user)
                 .getDate();
+
+        TavernEntity tavern = tavernService.findWithTables(user.getTavern());
 
         ReplyKeyboardMarkup tablesKeyboard = new ReplyKeyboardMarkup();
         List<KeyboardRow> rows = new ArrayList<>();
-        user.getTavern().getTables().stream()
+        tavern.getTables().stream()
                 .sorted(Comparator.comparing(TableEntity::getNumberSeats))
                 .forEach(table -> {
-                            String reserveTimes = table.getReserves().stream()
-                                    .filter(reserve -> reserve.getStatus() == ReserveStatus.ACTIVE)
+                            String reserveTimes = reserveService.findActiveByTable(table).stream()
                                     .filter(reserve -> date.isEqual(reserve.getDate()))
                                     .map(ReserveEntity::getTime)
                                     .sorted(Comparator.naturalOrder())
-                                    .map(time -> time.format(Constant.HH_MM_FORMATTER))
+                                    .map(time -> time.format(HH_MM_FORMATTER))
                                     .collect(Collectors.joining(","));
 
                             String foundReserve = "занято с " + reserveTimes;
@@ -446,17 +584,14 @@ public class ReserveHandler implements MessageHandler {
     }
 
     private SendMessage configureDeleteReserve(UserEntity user, Long chatId) {
-        List<LocalDate> reservesDates = user.getTavern().getTables().stream()
-                .map(TableEntity::getReserves)
-                .flatMap(Collection::stream)
-                .filter(reserve -> reserve.getStatus() == ReserveStatus.ACTIVE)
+        List<LocalDate> reservesDates = reserveService.findActiveByTavernWithTable(user.getTavern()).stream()
                 .map(ReserveEntity::getDate)
                 .distinct()
                 .sorted(LocalDate::compareTo)
-                .collect(Collectors.toList());
+                .toList();
 
-        if (CollectionUtils.isEmpty(reservesDates)) {
-            return configureMessage(chatId, "Нечего удалять.", KeyboardService.RESERVE_LIST_KEYBOARD);
+        if (isEmpty(reservesDates)) {
+            return configureMessage(chatId, "У Вас нет активных бронирований.", RESERVE_LIST_KEYBOARD);
         }
 
         userService.updateSubState(user, SubState.DELETE_RESERVE_CHOICE_DATE);
@@ -464,7 +599,7 @@ public class ReserveHandler implements MessageHandler {
         ReplyKeyboardMarkup reservesDatesKeyboard = new ReplyKeyboardMarkup();
         List<KeyboardRow> rows = new ArrayList<>();
         reservesDates.forEach(date ->
-                rows.add(new KeyboardRow(List.of(new KeyboardButton(date.format(Constant.DD_MM_YYYY_FORMATTER)))))
+                rows.add(new KeyboardRow(List.of(new KeyboardButton(date.format(DD_MM_YYYY_FORMATTER)))))
         );
 
         rows.add(new KeyboardRow(List.of(new KeyboardButton(Button.CANCEL.getText()))));
@@ -472,21 +607,18 @@ public class ReserveHandler implements MessageHandler {
         reservesDatesKeyboard.setKeyboard(rows);
         reservesDatesKeyboard.setResizeKeyboard(true);
 
-        return configureMessage(chatId, "Выберите дату, за которую хотите удалить резерв.", reservesDatesKeyboard);
+        return configureMessage(chatId, "Выберите дату, за которую хотите завершить бронирование.", reservesDatesKeyboard);
     }
 
-    private String fillReservesList(Set<TableEntity> tables) {
-        Map<LocalDate, List<ReserveEntity>> reserves = tables.stream()
-                .map(TableEntity::getReserves)
-                .flatMap(Collection::stream)
-                .filter(reserve -> reserve.getStatus() == ReserveStatus.ACTIVE)
+    private String fillReservesList(TavernEntity tavern) {
+        Map<LocalDate, List<ReserveEntity>> groupingReserves = reserveService.findActiveByTavernWithTableUser(tavern).stream()
                 .collect(Collectors.groupingBy(ReserveEntity::getDate));
 
-        if (CollectionUtils.isEmpty(reserves)) {
+        if (isEmpty(groupingReserves)) {
             return "Список бронирований пуст.";
         }
 
-        List<LocalDate> sortedDate = reserves.keySet().stream()
+        List<LocalDate> sortedDate = groupingReserves.keySet().stream()
                 .sorted(LocalDate::compareTo)
                 .toList();
 
@@ -494,17 +626,17 @@ public class ReserveHandler implements MessageHandler {
 
         StringBuilder reservesDescription = new StringBuilder();
         for (LocalDate date : sortedDate) {
-            String reservesList = reserves.get(date).stream()
+            String reservesList = groupingReserves.get(date).stream()
                     .sorted(Comparator.comparing(ReserveEntity::getTime, LocalTime::compareTo))
                     .map(reserve -> String.format(
                             "<i>%s</i> <b>%s</b> %s %s %s",
-                            reserve.getTime().format(Constant.HH_MM_FORMATTER),
+                            reserve.getTime().format(HH_MM_FORMATTER),
                             reserve.getTable().getLabel(),
                             reserve.getNumberPeople(),
-                            reserve.getManualMode() ? Optional.ofNullable(reserve.getName())
+                            reserve.getUser() == null ? Optional.ofNullable(reserve.getName())
                                     .orElse("")
                                     : reserve.getUser().getName(),
-                            reserve.getManualMode() ? Optional.ofNullable(reserve.getPhoneNumber())
+                            reserve.getUser() == null ? Optional.ofNullable(reserve.getPhoneNumber())
                                     .orElse("")
                                     : reserve.getUser().findContact(ContractType.MOBILE)
                                     .map(ContactEntity::getValue)
@@ -514,7 +646,7 @@ public class ReserveHandler implements MessageHandler {
 
             reservesDescription
                     .append("<b>\uD83D\uDDD3 ")
-                    .append(date.format(Constant.DD_MM_YYYY_FORMATTER))
+                    .append(date.format(DD_MM_YYYY_FORMATTER))
                     .append("</b>")
                     .append(date.isEqual(LocalDate.now()) ? " <i>(сегодня)</i>" : "")
                     .append(date.isEqual(tomorrow) ? " <i>(завтра)</i>" : "")
